--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
